<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_create_task">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >


        <TextView
            android:id="@+id/create_tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:text="@string/message"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/create_tv_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="70dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:text="@string/task_name" />

        <EditText
            android:id="@+id/create_et_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp"
            android:padding="10dp" />

        <TextView
            android:id="@+id/create_tv_task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:text="@string/task_description" />

        <EditText
            android:id="@+id/create_et_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/create_tv_task_date_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:text="@string/task_date_amp_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:weightSum="2" >

            <TextView
                android:id="@+id/create_et_task_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:hint="@string/date"
                android:textColorHint="@color/white"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/create_et_task_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/time"
                android:textSize="14sp"
                android:textColorHint="@color/white"
                 android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/create_btn_add_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:background="@drawable/btn_effect"
            android:layout_margin="20dp" />
    </LinearLayout>
</ScrollView>