<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User_Profile.Profile"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- profile text -->
            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <!-- profile image -->
            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="85dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/person" />

            <!-- profile username -->
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="username"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <!-- task left & task done -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_task_left"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_effect"
                    android:gravity="center"
                    android:text="@string/_5_task_left"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_task_done"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_effect"
                    android:gravity="center"
                    android:text="@string/_10_task_done"
                    android:textColor="@color/white" />
            </LinearLayout>

            <!-- settings text-->

            <!-- App settings -->


            <!-- Account text -->


            <TextView
                android:id="@+id/tv_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="10dp"
                android:text="@string/account"
                android:gravity="center_vertical"
                android:textSize="25sp"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry" />

            <!-- change account name -->
            <TextView
                android:id="@+id/tv_change_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:text="@string/change_account_name"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
                app:drawableStartCompat="@drawable/ic_baseline_person_24"
                tools:ignore="RtlSymmetry" />


            <!-- change account password -->
            <TextView
                android:id="@+id/tv_change_account_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:text="@string/change_account_password"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center_vertical"                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
                app:drawableStartCompat="@drawable/ic_baseline_lock_24"
                tools:ignore="RtlSymmetry" />

            <!-- change account image -->
            <TextView
                android:id="@+id/tv_change_account_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:text="@string/change_account_image"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center_vertical"                app:drawableStartCompat="@drawable/ic_baseline_photo_camera_24"
                tools:ignore="RtlSymmetry" />


            <!-- New version text -->

            <!-- about us -->
            <TextView
                android:id="@+id/tv_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center_vertical"                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
                app:drawableStartCompat="@drawable/ic_baseline_logout_24"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:paddingStart="10dp"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/tv_app_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:text="@string/app_settings"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center_vertical"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
                app:drawableStartCompat="@drawable/ic_baseline_settings_24"
                tools:ignore="RtlSymmetry" />




            <TextView
                android:id="@+id/tv_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:text="@string/about_us"
                android:gravity="center_vertical"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_app_registration_24"
                tools:ignore="RtlSymmetry" />

            <!-- FAQ -->
            <TextView
                android:id="@+id/tv_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:text="@string/faq"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_error_outline_24"
                tools:ignore="RtlSymmetry" />


            <!-- help & feedback -->
            <TextView
                android:id="@+id/tv_help_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:text="@string/help_amp_feedback"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center_vertical"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
                app:drawableStartCompat="@drawable/ic_baseline_feedback_24"
                tools:ignore="RtlSymmetry" />


            <!-- support us -->
            <TextView
                android:id="@+id/tv_support_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:text="@string/support_us"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center_vertical"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
                app:drawableStartCompat="@drawable/ic_baseline_star_rate_24"
                tools:ignore="RtlSymmetry" />


            <!-- log out -->


        </LinearLayout>

    </ScrollView>

</LinearLayout>