<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_custom_change_account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/change_account_password"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:id="@+id/line"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:background="@color/white"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tv_custom_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:text="@string/enter_old_password"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/et_custom_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:padding="5dp"
        android:background="@color/gray"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_custom_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:text="@string/enter_new_password"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/et_custom_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/gray"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_custom_cancel_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/btn_effect"
            app:backgroundTint="@null"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_custom_edit_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/btn_effect"
            app:backgroundTint="@null"
            android:text="@string/edit" />
    </LinearLayout>

</LinearLayout>