<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".User_Profile.FAQ">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:background="@color/text_view_bg"
                android:textSize="12sp"
                android:text="@string/q1"
                android:gravity="start"
                android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
                app:backgroundTint="@null"/>

            <FrameLayout
                android:id="@+id/frame_layout_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </FrameLayout>

            <Button
                android:id="@+id/btn_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_view_bg"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/q2"
                android:gravity="start"
                android:layout_margin="5dp"
                app:backgroundTint="@null"/>

            <FrameLayout
                android:id="@+id/frame_layout_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </FrameLayout>

            <Button
                android:id="@+id/btn_q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_view_bg"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/q3"
                android:gravity="start"
                android:layout_margin="5dp"
                app:backgroundTint="@null"/>

            <FrameLayout
                android:id="@+id/frame_layout_q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </FrameLayout>

            <Button
                android:id="@+id/btn_q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_view_bg"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/q4"
                android:gravity="start"
                android:layout_margin="5dp"
                app:backgroundTint="@null"/>

            <FrameLayout
                android:id="@+id/frame_layout_q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </FrameLayout>

            <Button
                android:id="@+id/btn_q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_view_bg"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="start"
                android:text="@string/q5"
                android:layout_margin="5dp"
                app:backgroundTint="@null"/>

            <FrameLayout
                android:id="@+id/frame_layout_q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>